# Semantic-Agent-Discovery

./: .gitignore
backend/: Dockerfile  go.mod
backend/cmd/server/: main.go
backend/internal/api/: router.go
backend/internal/api/handlers/: agents.go  cost.go  fleet.go
backend/internal/api/middleware/: auth.go
backend/internal/db/: postgres.go
backend/internal/db/migrations/: 001_agents.sql  002_heartbeats.sql  003_cost_events.sql  004_api_keys.sql
backend/internal/services/: agent_service.go  cost_service.go  fleet_service.go
backend/internal/types/: types.go
demo/: demo_agent.py  demo_agent_autogen.py  demo_agent_crewai.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: fleet.ts
frontend/src/components/: AgentRow.tsx  FleetTable.tsx  LiveBadge.tsx  MetricCard.tsx  StatusBadge.tsx
frontend/src/hooks/: useFleet.ts
frontend/src/types/: types.ts
infra/: docker-compose.yml
sdk/: pyproject.toml
sdk/invexsai/: __init__.py  client.py  heartbeat.py  pricing.py  types.py
sdk/invexsai/handlers/: autogen.py  langchain.py
sdk/tests/: test_langchain.py
semantic/: README.md  agents.json  agents_enriched.json  agents_final.json  generate_corpus.py  main.py  requirements.txt  search.py  vectors.npy  visualize.py
