[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "invexsai"
version = "0.1.0"
description = "Control plane for enterprise AI agent fleets"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
    "langchain-core>=0.1.0",
]

[project.optional-dependencies]
langchain = ["langchain>=0.1.0", "langchain-openai>=0.0.5"]
autogen = ["pyautogen>=0.2.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "openai>=1.0.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
